--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="DC super héros...">
-    <title>Gotham City</title>
+    <title>Goham city</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="180x180" href="asset/apple-touch-icon.png">
@@ -61,7 +61,7 @@
     </main>
     <footer itemprop="copyrightYear">
         <p><a href="#">index</a></p>
-        <p>&copy; - User Site - 2021</p>
+        <p>&copy; - User Site - </p>
          
     </footer>
     <script src="./js/app.js" ></script>
